# agent-runbook-orchestrator

./: README.md  index.html  package.json  pyproject.toml  styles.css
api/: _telemetry_static.json  stats.py
docs/: architecture.md  roadmap.md
frontend/: next.config.mjs
src/agent_runbook_orchestrator/: __init__.py  catalog.py  cli.py  project.json
src/lib/: project.ts
tests/: test_cli.py
