[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runbook-orchestrator"
version = "0.1.0"
description = "A durable execution layer for AI-assisted operational runbooks with approvals, retries, and audit history."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ignazio De Santis" }
]
dependencies = []

[project.scripts]
agent-runbook-orchestrator = "agent_runbook_orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
# Scope discovery to the Python package only — the Next.js dashboard
# also lives under src/ (src/app, src/components, src/lib, src/test) and
# we don't want setuptools trying to import those as Python modules.
include = ["agent_runbook_orchestrator*"]

[tool.setuptools.package-data]
agent_runbook_orchestrator = ["project.json"]
